syntax = "proto3";

package session;

option go_package = "/session;session";


message AccessToken {
  string user_id = 1;
}

message VerifyTokensDTO {
  string access_token = 1;
  string refresh_token = 2;
}

message GenerateTokensDTO {
  string fingerprint = 1;
  string ua = 2;
  string ip = 3;
  string user_id = 4;
}

message SessionOptions {
  string fingerprint = 1;
  string ua = 2;
  string ip = 3;
}

message GenerateTokensBySessionDTO {
  string access_token = 1;
  string refresh_token = 2;
  SessionOptions session = 3;
}
service SessionService {
  rpc VerifyTokens (VerifyTokensDTO) returns (AccessToken);
  rpc GenerateTokens (GenerateTokensDTO) returns (VerifyTokensDTO);
  rpc GenerateTokensBySession (GenerateTokensBySessionDTO) returns (VerifyTokensDTO);
}
